2008-02-08  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): Raise debugging level of futex debugging
	output.

2008-02-08  Thomas Schwinge  <tschwinge@gnu.org>

	* Makefile.am (viengoos_LDADD): Link against newlib's
	`libc-routines.a'.

2008-02-08  Neal H. Walfield  <neal@gnu.org>

	* object.h (memory_object_destroy): Update comment to indicate
	that LRU_LOCK must not be held by the caller.
	(object_desc_claim): Update comment to indicate that LRU_LOCK must
	be held by the caller.
	* object.c (memory_object_destroy): Don't assert that LRU_LOCK is
	held.  Take the lock before calling object_desc_claim.
	(object_desc_claim): Assert that LRU_LOCK is held.
	* viengoos.c (system_task_load): Take LRU_LOCK before calling
	object_claim.

	* memory.c (memory_frame_allocate): After getting an object, lock
	it and then drop LRU_LOCK.

2008-02-08  Neal H. Walfield  <neal@gnu.org>

	* as.c: Don't include "output.h".
	(AS_LOCK) [! RM_INTERN]: Only define if not already defined.
	(AS_UNLOCK) [! RM_INTERN]: Likewise.
	(AS_DUMP): Pass AS_ROOT_ADDR to the invocation of rm_as_dump.
	(ID): New macro.
	(OBJECT_INDEX_PARAM): New macro.
	(OBJECT_INDEX_ARG): Likewise.
	(do_index): Reverse order of pte and addr arguments.  Update
	users.
	(as_build_internal): Wrap function name with ID.  Add
	OBJECT_INDEX_PARAM to formal arguments.  Set the subpage size of
	the capability before calling do_index.  Add additional asserts
	and comments.
	(as_slot_ensure_full): Wrap function name with ID.  Add
	OBJECT_INDEX_PARAM to formal arguments.  Include OBJECT_INDEX_ARG
	when invoking as_build_internal.
	(as_insert): Likewise.
	* as.c (as_lock): Move from here...
	* cap-lookup.c: ... to here.
	* as.c (print_nr): Move from here...
	* cap-lookup.c: ... to here.
	* as.c (do_walk): Move from here...
	* cap-lookup.c: ... to here.
	* as.c (as_dump_from): Move from here...
	* cap-lookup.c: ... to here.
	* as-custom.c: New file customizing as.c.